<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/common_item_no_margin">

        <TextView
            android:id="@+id/tv_random_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_random_play"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/list_btn_orange_randomplay"
            android:drawablePadding="@dimen/drawable_left_padding"
            android:background="@drawable/bg_black_border"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            style="@style/text_13_pri"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/local_file_count_default"
            style="@style/text_12_sec"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/local_manage"
            style="@style/text_13_pri"/>

    </LinearLayout>

    <View style="@style/divider" />

    <com.synaric.app.widget.CompoundRecyclerView
        android:id="@+id/crv_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:crv_empty_view="@layout/view_empty"/>

</LinearLayout>