<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/common_item_padding"
    android:paddingTop="@dimen/common_item_padding"
    android:background="?selectableItemBackground"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/ic_48dp"
        android:layout_height="@dimen/ic_48dp"
        android:layout_marginBottom="@dimen/common_item_padding"
        android:layout_marginEnd="@dimen/common_item_padding"
        android:src="@color/img_load_failed"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ic_48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="@dimen/common_item_padding">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/ic_48dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_15_pri"
                    android:singleLine="true"
                    android:text="@string/no_title" />

                <TextView
                    android:id="@+id/tv_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_12_sec"
                    android:text="@string/unknown" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_file_count_default"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/common_item_padding"
                android:drawableEnd="@drawable/open_icon"/>

        </LinearLayout>

        <View
            android:layout_alignParentBottom="true"
            style="@style/divider"/>

    </RelativeLayout>

</LinearLayout>